versal name change

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
 {
-    "builds": [{
-      "src": "blockchain_project/wsgi.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.6" }
-    }],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "blockchain_project/wsgi.py"
-      }
-    ]
-    
+  "routes": [
+    { "src": "/(.*)", "dest": "blockchain_project/wsgi.py" }
+  ]
 }
